--- a/package.json
+++ b/package.json
@@ -23,5 +23,19 @@
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.3"
-  }
+  },"prettier": {
+		"semi": false,
+		"useTabs": true,
+		"singleQuote": true,
+		"arrowParens": "always",
+		"bracketSpacing": true,
+		"jsxBracketSameLine": false,
+		"bracketSameLine": false,
+		"trailingComma": "es5",
+		"printWidth": 100,
+		"tabWidth": 2,
+		"plugins": [
+			"prettier-plugin-tailwindcss"
+		]
+	}
 }
